[package]
name = "yuv"
version = "0.1.5"
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
categories = ["multimedia::encoding"]
description = "Conversion between various YUV (YCbCr) formats and RGB"
edition = "2021"
homepage = "https://lib.rs/crates/yuv"
include = ["/Cargo.toml", "/README.md", "/src/*.rs", "LICENSE"]
keywords = ["ycbcr", "rec709", "bt601", "color", "rgb"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/kornelski/yuv.git"

[dependencies]
num-traits = { version = "0.2.14", default-features = false }
rgb = "0.8.27"
num_enum = "0.5.7"
num_enum_derive = "0.5.7"

[features]
default = ["std"]
std = ["num-traits/std", "num_enum_derive/std"]